--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,7 +8,7 @@
     <!-- card -->
      <div class="row row-col-lg-3 ">
         <% for(let listing of allListing){%>
-            <div class="card" style="width: 20rem;">
+            <div class="card">
                 <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-body">
                   <p class="card-text">
