--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,6 +8,7 @@
     <!-- card -->
      <div class="row row-col-lg-3 ">
         <% for(let listing of allListing){%>
+            <a href="/listings/<%=listing._id%>">
             <div class="card">
                 <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-body">
@@ -17,7 +18,8 @@
                   </p>
                 </div>
               </div>
-              <%}%>
+            </a>
+        <%}%>
      </div>
     
 
