--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,18 +8,16 @@
     <!-- card -->
      <div class="row row-col-lg-3 ">
         <% for(let listing of allListing){%>
-            <a href="/listings/<%=listing._id%>">
-            <div class="card">
-                <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+            <div class="card" style="width: 20rem;">
+                <img src="<%=listing.image%>" class="card-img-top" alt="listing_image">
                 <div class="card-body">
                   <p class="card-text">
-                    <b><%=listing.title%></b> <br>
+                    <%=listing.title%> <br>
                     &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
                   </p>
                 </div>
               </div>
-            </a>
-        <%}%>
+              <%}%>
      </div>
     
 
