--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,44 +1,19 @@
 <% layout("/layouts/boilerplate")%>
-<div class="row">
-<div class="col-8 offset-2">
-
-
-    <br><br>
+<body>
     <h3>Create a new listing</h3>
     <form method="post" action="/listings">
-        <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input type="title" name="listing[title]" placeholder="Enter title" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" placeholder="Enter description" class="form-control"></textarea>
-        </div>
-
-        <div class="mb-3">
-            <label for="image" class="form-label">Image link</label>
-            <input type="text" name="listing[image]" placeholder="enter image URL/link" class="form-control">
-        </div>
-        <div class="row">
-            <div class="mb-3 col-md-4">
-                <label for="price" class="form-label">Price</label>
-                <input type="number" name="listing[price]" placeholder="enter price" class="form-control">
-            </div>
-
-            <div class="mb-3 col-md-8">
-                <label for="country" class="form-label">Country</label>
-                <input type="text" name="listing[country]" placeholder="Enter country" class="form-control">
-            </div>
-        </div>
-        
-        <div class="mb-3">
-            <label for="location" class="form-label">Address</label>
-            <input type="text" name="listing[location]" placeholder="Enter address" class="form-control">
-        </div>
-        
-        <button type="submit" class="btn btn-dark add-btn">submit</button>
-        <br><br><br>
+        <input type="title" name="listing[title]" placeholder="Enter title">
+        <br>
+        <textarea name="listing[description]" placeholder="Enter description"></textarea>
+        <br>
+        <input type="text" name="listing[image]" placeholder="enter image URL/link">
+        <br>
+        <input type="number" name="listing[price]" placeholder="enter price">
+        <br>
+        <input type="text" name="listing[location]" placeholder="Enter address" >
+        <br>
+        <input type="text" name="listing[country]" placeholder="Enter country" >
+        <br>
+        <button>submit</button>
     </form>
-</div>
-</div>
+</body>
