--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,10 +9,10 @@
      <div class="row row-col-lg-3 ">
         <% for(let listing of allListing){%>
             <div class="card" style="width: 20rem;">
-                <img src="<%=listing.image%>" class="card-img-top" alt="listing_image">
+                <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem">
                 <div class="card-body">
                   <p class="card-text">
-                    <%=listing.title%> <br>
+                    <b><%=listing.title%></b> <br>
                     &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
                   </p>
                 </div>
