adding card hover effect

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,15 @@
 .card-body {
     padding: 0 !important;
 }
+.listing-link{
+    text-decoration: none;
+}
+
+/* card effect */
+.card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: #fff;
+}
