--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex: 1;
+}
 .navbar{
     height: 5rem;
     background: #fff;
@@ -60,4 +68,9 @@
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: #fff;
+}
+/* new page */
+.add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
 }
