--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,21 +7,38 @@
 </head> -->
 <% layout("/layouts/boilerplate") -%>
 <body>
-    <h3>Edit Listing</h3>
-    <form method="post" action="/listings/<%= listing._id%>?_method=PUT">
-        <input type="text" name="listing[title]" value="<%=listing.title%>">
-        <br>
-        <textarea name="listing[description]" ><%=listing.description%></textarea>
-        <br>
-        <input type="text" name="listing[image]"  value="<%=listing.image%>">
-        <br>
-        <input type="number" name="listing[price]" value="<%=listing.price%>">
-        <br>
-        <input type="text" name="listing[location]" value="<%=listing.location%>" >
-        <br>
-        <input type="text" name="listing[country]" value="<%=listing.country%>" >
-        <br>
-        <button>edit</button>
-    </form>
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit Listing</h3>
+            <form method="post" action="/listings/<%= listing._id%>?_method=PUT">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" name="listing[title]" value="<%=listing.title%>" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" class="form-control"><%=listing.description%></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image Url</label>
+                    <input type="text" name="listing[image]"  value="<%=listing.image%>" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="number" name="listing[price]" value="<%=listing.price%>" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="listing" class="form-label">Address</label>
+                    <input type="text" name="listing[location]" value="<%=listing.location%>" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <input type="text" name="listing[country]" value="<%=listing.country%>" class="form-control">
+                </div>
+                <button class="btn add-btn">edit</button>
+            </form>
+        </div>
+    </div>
+   
 </body>
 <!-- </html> -->
