--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,43 @@
-
 <% layout("/layouts/boilerplate")%>
-<body>
-    <h3>Listing Details: </h3>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.description%></li>
-        <li>&#8377;<%=listing.price.toLocaleString("en-IN")%></li>
-        <li><%=listing.location%></li>
-        <li><%=listing.country%></li>
-    </ul>
-    <br>
-    <a href="/listings/<%=listing._id%>/edit">Edit this listing</a>
-    <br>
-    <form method="post" action="/listings/<%=listing._id%>?_method=Delete">
-        <button>Delete</button>
-    </form>
-</body>
+
+<div class="row">
+  <div class="col-8 offset-2 mt-3">
+    <h3>Listing Details</h3>
+  </div>
+  <div class="card col-6 offset-2">
+    <img
+      src="<%=listing.image%>"
+      class="card-img-top show-img"
+      alt="listing_image"
+    />
+    <div class="card-body">
+      <p class="card-text">
+        <i><b><%=listing.title%>. </b></i> <br />
+        <i><%=listing.description%></i> <br />
+        &#8377;<%=listing.price.toLocaleString("en-IN")%> <br />
+        <%=listing.location%>br <%=listing.country%>
+      </p>
+    </div>
+  </div>
+</div>
+<div class="row offset-2">
+    <div class="col-2">
+        <a href="/listings/<%=listing._id%>/edit" class="btn btn-success show-btns">Edit</a>
+    </div>
+    <div class="col-4">
+        <form method="post" action="/listings/<%=listing._id%>?_method=Delete">
+            <button class="btn btn-dark show-btns">Delete</button>
+          </form>
+    </div>  
+</div>
+
+<!-- <ul>
+    <li><%=listing.title%></li>
+    <li><%=listing.description%></li>
+    <li>&#8377;<%=listing.price.toLocaleString("en-IN")%></li>
+    <li><%=listing.location%></li>
+    <li><%=listing.country%></li>
+  </ul> -->
+<br />
+
+<body></body>
