--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -14,6 +14,9 @@
             class="form-control"
             required
           />
+        <div class="invalid-feedback">
+        Please choose a username.
+      </div>
         </div>
         <div class="mb-3">
           <label for="title" class="form-label">Description</label>
@@ -24,6 +27,9 @@
             class="form-control"
             required
           ></textarea>
+        <div class="invalid-feedback">
+        Please choose a username.
+      </div>
         </div>
         <div class="mb-3">
           <label for="title" class="form-label">Image url/link</label>
@@ -44,6 +50,9 @@
               class="form-control"
               required
             />
+          <div class="invalid-feedback">
+        Please choose a username.
+      </div>
           </div>
           <div class="mb-3 col-md-8">
             <label for="title" class="form-label">country</label>
@@ -54,6 +63,9 @@
               class="form-control"
               required
             />
+            <div class="invalid-feedback">
+        Please choose a username.
+      </div>
           </div>
         </div>
 
@@ -66,6 +78,9 @@
             class="form-control"
             required
           />
+          <div class="invalid-feedback">
+        Please choose a username.
+      </div>
         </div>
         <br />
         <button class="btn btn-dark add-btn">submit</button>
