--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-8 offset-2 mt-3">
-    <h3>Listing Details</h3>
+    <h3><%=listing.title%></h3>
   </div>
   <div class="card col-6 offset-2">
     <img
@@ -12,7 +12,7 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <i><b><%=listing.title%>. </b></i> <br />
+        <!-- <i><b><%=listing.title%>. </b></i> <br /> -->
         <i><%=listing.description%></i> <br />
         &#8377;<%=listing.price.toLocaleString("en-IN")%> <br />
         <%=listing.location%>br <%=listing.country%>
@@ -21,15 +21,33 @@
   </div>
 </div>
 <div class="row offset-2">
-    <div class="col-2">
-        <a href="/listings/<%=listing._id%>/edit" class="btn btn-success show-btns">Edit</a>
-    </div>
-    <div class="col-4">
-        <form method="post" action="/listings/<%=listing._id%>?_method=Delete">
-            <button class="btn btn-dark show-btns">Delete</button>
-          </form>
-    </div>  
+  <div class="col-2">
+    <a href="/listings/<%=listing._id%>/edit" class="btn btn-success show-btns">Edit</a>
+  </div>
+  <div class="col-4">
+    <form method="post" action="/listings/<%=listing._id%>?_method=Delete">
+      <button class="btn btn-dark show-btns">Delete</button>
+    </form><br><br>
+  </div>
+  <hr>
 </div>
+<!-- review  -->
+<div class="col-8 offset-2">
+  <h4>Leave a Review</h4>
+  <form>
+    <div>
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+    </div>
+    <div>
+      <label for="comment" class="form-label">Comments</label>
+      <textarea name="review[comment]" id="comment" class="form-control"></textarea>
+    </div>
+    <div class="mt-3">
+      <button class="btn btn-outline-dark">submit</button>
+    </div>
+  </form>
+ </div>
 
 <!-- <ul>
     <li><%=listing.title%></li>
