--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
   <div class="col-8 offset-2 mt-3">
     <h3><%=listing.title%></h3>
   </div>
-  <div class="card col-6 offset-2">
+  <div class="card col-6 listing-card offset-2">
     <img
       src="<%=listing.image%>"
       class="card-img-top show-img"
@@ -15,7 +15,7 @@
         <!-- <i><b><%=listing.title%>. </b></i> <br /> -->
         <i><%=listing.description%></i> <br />
         &#8377;<%=listing.price.toLocaleString("en-IN")%> <br />
-        <%=listing.location%>br <%=listing.country%>
+        <%=listing.location%> <%=listing.country%>
       </p>
     </div>
   </div>
@@ -64,4 +64,18 @@
       <button class="btn btn-outline-dark">submit</button>
     </div>
   </form>
+  <br>
+  <p><b>All Reviews</b></p>
+
+  <div class="row">
+  <% for(review of listing.reviews){ %>
+    <div class="card col-5 mb-3 ms-3">
+      <div class="card-body">
+        <h5 class="card-title">Jane Doe</h5>
+        <p class="card-text"><%= review.rating%></p>
+        <p class="card-text"><%= review.comment%></p>
+      </div>
+    </div>
+    <%}%>
+  </div>
 </div>
